--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="about-right">
-                    <img src="IMG_5252 2.JPG" alt="Austin Lee profile photo" class="about-photo">
+                    <img src="profile_image.JPG" alt="Austin Lee profile photo" class="about-photo">
                 </div>
             </div>
         </div>
