Update job status

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Austin Lee - Data Analyst Portfolio</title>
+    <title>Austin Lee</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -31,8 +31,8 @@
     <section id="home" class="section">
         <div class="container home-container">
             <h1><span id="typed-name"></span><span class="typed-cursor">|</span></h1>
-            <h2>Data Analyst</h2>
-            <p>Transforming data into actionable insights</p>
+            <h2>Data Engineer</h2>
+            <p>Architecting the backbone of data-driven success</p>
         </div>
     </section>
 
@@ -43,8 +43,8 @@
             <div class="about-flex">
                 <div class="about-left">
                     <div class="about-text">
-                        <p>I am a data analyst passionate about uncovering insights that drive meaningful change. As a Research Assistant at the University of Iowa, I've analyzed the impact of COVID-19 and explored how Social Determinants of Health affect patient outcomes, working with datasets containing over 20 million patient records across 80+ healthcare sites. I've also worked with CIVCO Medical Solutions to create a data analytics infrastructure, evaluate sales performance, and build Power BI dashboards that revealed actionable business insights.</p>
-                        <p>What drives me is digging deep into complex data to find the root cause of problems and translating those findings into actionable solutions. Whether it's identifying healthcare disparities or discovering that a newly launched product has an 86% expansion rate, I thrive on turning data into stories that matter.</p>
+                        <p>I am a data engineer passionate about building robust and scalable data infrastructure for better data-driven decision-making. As a Research Assistant at the University of Iowa, I've engineered data pipelines to process and analyze over 20 million patient records across 80+ healthcare sites, implementing efficient ETL processes and optimizing data workflows. I've also worked with CIVCO Medical Solutions to create a data analytics infrastructure, evaluate sales performance, and build Power BI dashboards that revealed actionable business insights.</p>
+                        <p>My passion lies in building robust infrastructure that not only solves immediate challenges but also scales to meet future needs, making data operations more efficient and reliable for everyone.</p>
                         <p>When I'm not analyzing datasets, you'll find me enjoying a good cup of coffee while listening to music or playing songs myself with guitar or piano.</p>
                     </div>
                 </div>
@@ -100,8 +100,14 @@
             <h2>Professional Experience</h2>
             <div class="projects-grid">
                 <div class="project-card">
+                    <h3>Associate Data Engineer</h3>
+                    <p><strong>Ruan Transportation Management Systems</strong> <br><em>July 2025 - Present</em></p>
+                    <ul>
+                    </ul>
+                </div>
+                <div class="project-card">
                     <h3>Research Assistant</h3>
-                    <p><strong>University of Iowa</strong> <br><em>July 2023 - Present</em></p>
+                    <p><strong>University of Iowa</strong> <br><em>July 2023 - June 2025</em></p>
                     <ul>
                         <li>Participated in 3+ NIH-funded healthcare studies utilizing Palantir to analyze N3C data</li>
                         <li>Transformed 20M+ patient records using SQL and R, enhancing data analytics capabilities</li>
