About me content edit

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <div class="about-left">
                     <div class="about-text">
                         <p>I am a data engineer passionate about building robust and scalable data infrastructure for better data-driven decision-making. As a Research Assistant at the University of Iowa, I've engineered data pipelines to process and analyze over 20 million patient records across 80+ healthcare sites, implementing efficient ETL processes and optimizing data workflows. I've also worked with CIVCO Medical Solutions to create a data analytics infrastructure, evaluate sales performance, and build Power BI dashboards that revealed actionable business insights.</p>
-                        <p>My passion lies in building robust infrastructure that not only solves immediate challenges but also scales to meet future needs, making data operations more efficient and reliable for everyone.</p>
-                        <p>When I'm not analyzing datasets, you'll find me enjoying a good cup of coffee while listening to music or playing songs myself with guitar or piano.</p>
+                        <p>My passion lies in building robust data infrastructure and ensuring the data quality that not only solves immediate challenges but also scales to meet future needs, making data operations more efficient and reliable for everyone. I am also interested in using the data to find critical insights and solve real-world problems.</p>
+                        <p>When I'm not analyzing datasets, you'll find me looking for good restaurants, enjoying a good cup of coffee while listening to music, or playing songs myself with guitar or piano.</p>
                     </div>
                 </div>
                 <div class="about-right">
