--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GK4H1HF9K6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-GK4H1HF9K6');
+    </script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Austin Lee</title>
@@ -11,7 +21,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-brand">Austin Lee</div>
-        <div class="nav-toggle" id="navToggle">
+        <div class="nav-toggle" id="navToggle"> 
             <span></span>
             <span></span>
             <span></span>
