--- a/index.html
+++ b/index.html
@@ -187,6 +187,23 @@
         <div class="container">
             <h2>Projects</h2>
             <div class="projects-grid">
+                <div class="project-card spotify-wrapped">
+                    <a class="project-card-link" href="projects/all-time-spotify-wrapped.html" aria-label="All-Time Spotify Wrapped"></a>
+                    <h3>All-Time Spotify Wrapped</h3>
+                    <div class="project-details">
+                        <div class="project-info">
+                            <p class="project-description">A comprehensive data pipeline that extracts, transforms, and visualizes complete Spotify listening history using modern data engineering tools including Apache Airflow, dbt, DuckDB, and OpenLineage for data lineage tracking.</p>
+                            <div class="project-tags">
+                                <span class="tag">Data Engineering</span>
+                                <span class="tag">Apache Airflow</span>
+                                <span class="tag">dbt</span>
+                                <span class="tag">DuckDB</span>
+                                <span class="tag">Data Lineage</span>
+                            </div>
+                            <a href="projects/all-time-spotify-wrapped.html" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
                 <div class="project-card diabetes-care">
                     <a class="project-card-link" href="projects/diabetes-care.html" aria-label="Racial Disparities in Diabetes Care"></a>
                     <h3>Racial Disparities in Diabetes Care</h3>
