--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                 <div class="skill-card">
                     <i class="fas fa-code"></i>
                     <h3>Programming Languages</h3>
-                    <p>Python, MySQL, MS SQL, PostgreSQL, R, Java</p>
+                    <p>Python, MS SQL, T-SQL, PostgreSQL, R, Java</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-tools"></i>
                     <h3>Tools & Platforms</h3>
-                    <p>Git, Tableau, Power BI, Microsoft Azure, Microsoft Office, Palantir Foundry, TriNetX, SSMS, DBeaver</p>
+                    <p>Microsoft Azure, Apache Airflow, dbt, DuckDB, Docker,Git, Tableau, Power BI, Microsoft Office, Palantir Foundry, TriNetX, SSMS, DBeaver</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-layer-group"></i>
@@ -88,7 +88,7 @@
                 <div class="skill-card">
                     <i class="fas fa-brain"></i>
                     <h3>Technical Skills</h3>
-                    <p>Machine Learning, Data Visualization, Data Cleaning, Statistical Analysis, ETL Process, A/B Testing</p>
+                    <p>ETL/ELT, Dimensional Modeling, Data Warehousing, Data Pipelines, Machine Learning, Data Visualization, Data Cleaning, Statistical Analysis, A/B Testing</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-language"></i>
